--- a/2023-11-03/static/css/table4.css
+++ b/2023-11-03/static/css/table4.css
@@ -7,7 +7,7 @@
     border-bottom: 4px solid #ccc;
     color:white;
 }
-.detail, .expense, .detailCell, .expenseCell, {
+.detail, .expense, .detailCell, .expenseCell{
     border-left: 1px solid #ccc;
     border-right: 1px solid #ccc;
 }
