--- a/2023-11-07/static/css/homework.css
+++ b/2023-11-07/static/css/homework.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
 }
 #wrap{
-    width: 1000px;
+    width: 700px;
     margin:0 auto;
     position:relative;
 }
@@ -52,8 +52,12 @@ body{
     margin-top: 15px;
 }
 .bee{
-        
-}
+    position: relative;
+    left: 320px; 
+    bottom: 60px;
+    line-height: 60px;
+    margin-top: -120px;
+}    
 #foot{
     width: 100%;
     padding: 50px;
