--- a/2023-11-09/static/css/default.css
+++ b/2023-11-09/static/css/default.css
@@ -64,7 +64,9 @@
     margin-left: 650px;
     margin-top: -30px;
 }
-
+.card{
+    position: relative;
+}
 .build img{
     position: relative;
     width: 170px;
@@ -87,7 +89,6 @@
     margin-top: -850px;
 }
 .learn h3{
-    position: relative;
     margin-left: 600px;
     margin-top: -72px
 }
